--- a/test-output/index.html
+++ b/test-output/index.html
@@ -37,8 +37,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" class="navigator-link" panel-name="suite-Default_suite">
-              <span class="suite-name border-passed">Default suite</span>
+            <a href="#" class="navigator-link" panel-name="suite-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs">
+              <span class="suite-name border-passed">Selenium Coding challenge Part1- Naveen Automation Labs</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -48,37 +48,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\RUPAM\AppData\Local\Temp\testng-eclipse--1740827024\testng-customsuite.xml</span>
+                  <a href="#" class="navigator-link " panel-name="test-xml-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs">
+                    <span>F:\workspace\SeleniumCodingChallengePart1Rupam\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="testlist-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="testlist-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="group-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="group-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="times-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="times-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="reporter-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="reporter-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="ignored-methods-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="ignored-methods-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="chronological-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="chronological-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -96,16 +96,16 @@
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs" class="hide-methods passed suite-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs"> (hide)</a> <!-- hide-methods passed suite-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs -->
+                      <a href="#" panel-name="suite-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs" class="show-methods passed suite-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs"> (show)</a> <!-- show-methods passed suite-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs -->
                     </span>
-                    <div class="method-list-content passed suite-Default_suite">
+                    <div class="method-list-content passed suite-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Assignment.Zoopla.Test.NewTest" hash-for-method="f">f</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs" title="Assignment.Zoopla.Test.NewTest" hash-for-method="valiDateAgentName">valiDateAgentName</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
+                    </div> <!-- method-list-content passed suite-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -116,8 +116,8 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-passed">
+        <div panel-name="suite-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs" class="panel Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs">
+          <div class="suite-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
               <span class="class-name">Assignment.Zoopla.Test.NewTest</span>
@@ -125,60 +125,60 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="f">
-                  </a> <!-- f -->
-                  <span class="method-name">f</span>
+                  <a name="valiDateAgentName">
+                  </a> <!-- valiDateAgentName -->
+                  <span class="method-name">valiDateAgentName</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
-        </div> <!-- panel Default_suite -->
-        <div panel-name="test-xml-Default_suite" class="panel">
+          </div> <!-- suite-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs-class-passed -->
+        </div> <!-- panel Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs -->
+        <div panel-name="test-xml-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\RUPAM\AppData\Local\Temp\testng-eclipse--1740827024\testng-customsuite.xml</span>
+            <span class="header-content">F:\workspace\SeleniumCodingChallengePart1Rupam\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
+&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Selenium Coding challenge Part1- Naveen Automation Labs&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Selenium Coding challenge Part1- Naveen Automation Labs&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;Assignment.Zoopla.Test.NewTest&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Default test --&gt;
-&lt;/suite&gt; &lt;!-- Default suite --&gt;
+  &lt;/test&gt; &lt;!-- Selenium Coding challenge Part1- Naveen Automation Labs --&gt;
+&lt;/suite&gt; &lt;!-- Selenium Coding challenge Part1- Naveen Automation Labs --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-Default_suite" class="panel">
+        <div panel-name="testlist-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for Default suite</span>
+            <span class="header-content">Tests for Selenium Coding challenge Part1- Naveen Automation Labs</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (1 class)</span>
+                <span class="test-name">Selenium Coding challenge Part1- Naveen Automation Labs (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-Default_suite" class="panel">
+        <div panel-name="group-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for Default suite</span>
+            <span class="header-content">Groups for Selenium Coding challenge Part1- Naveen Automation Labs</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-Default_suite" class="panel">
+        <div panel-name="times-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for Default suite</span>
+            <span class="header-content">Times for Selenium Coding challenge Part1- Naveen Automation Labs</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_Default_suite');
-function tableData_Default_suite() {
+suiteTableInitFunctions.push('tableData_Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs');
+function tableData_Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
@@ -186,34 +186,34 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'f')
+data.setCell(0, 1, 'valiDateAgentName')
 data.setCell(0, 2, 'Assignment.Zoopla.Test.NewTest')
-data.setCell(0, 3, 57694);
-window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
+data.setCell(0, 3, 59963);
+window.suiteTableData['Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs']= { tableData: data, tableDiv: 'times-div-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 57 seconds</span>
-              <div id="times-div-Default_suite">
-              </div> <!-- times-div-Default_suite -->
+              <span class="suite-total-time">Total running time: 59 seconds</span>
+              <div id="times-div-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs">
+              </div> <!-- times-div-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-Default_suite" class="panel">
+        <div panel-name="reporter-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for Default suite</span>
+            <span class="header-content">Reporter output for Selenium Coding challenge Part1- Naveen Automation Labs</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-Default_suite" class="panel">
+        <div panel-name="ignored-methods-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-Default_suite" class="panel">
+        <div panel-name="chronological-Selenium_Coding_challenge_Part1-_Naveen_Automation_Labs" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
@@ -225,12 +225,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">f</span>
-                <span class="method-start">28612 ms</span>
+                <span class="method-name">valiDateAgentName</span>
+                <span class="method-start">53740 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">86313 ms</span>
+                <span class="method-start">113710 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
