--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="96a48d">  <td>19/04/06 12:54:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterClass()[pri:0, instance:Assignment.Zoopla.Test.NewTest@cb5822]">&lt;&lt;afterClass</td> 
+<tr bgcolor="96a48d">  <td>19/04/14 13:11:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterClass()[pri:0, instance:Assignment.Zoopla.Test.NewTest@cb5822]">&lt;&lt;afterClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="96a48d">  <td>19/04/06 12:52:59</td>   <td>-86305</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeClass()[pri:0, instance:Assignment.Zoopla.Test.NewTest@cb5822]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="96a48d">  <td>19/04/14 13:09:10</td>   <td>-129051</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeClass()[pri:0, instance:Assignment.Zoopla.Test.NewTest@cb5822]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="96a48d">  <td>19/04/06 12:53:28</td>   <td>-57701</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.f()[pri:0, instance:Assignment.Zoopla.Test.NewTest@cb5822]">f</td> 
+<tr bgcolor="96a48d">  <td>19/04/14 13:09:56</td>   <td>-82271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.valiDateAgentName()[pri:0, instance:Assignment.Zoopla.Test.NewTest@cb5822]">valiDateAgentName</td> 
   <td>main@1225439493</td>   <td></td> </tr>
 </table>
