--- a/test-output/old/Selenium Coding challenge Part1- Naveen Automation Labs/methods.html
+++ b/test-output/old/Selenium Coding challenge Part1- Naveen Automation Labs/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Selenium Coding challenge Part1- Naveen Automation Labs</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="96a48d">  <td>19/04/06 13:47:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeClass()[pri:0, instance:Assignment.Zoopla.Test.NewTest@cb5822]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="96a48d">  <td>19/04/06 13:48:28</td>   <td>53731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.valiDateAgentName()[pri:0, instance:Assignment.Zoopla.Test.NewTest@cb5822]">valiDateAgentName</td> 
-  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="96a48d">  <td>19/04/06 13:49:28</td>   <td>113702</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterClass()[pri:0, instance:Assignment.Zoopla.Test.NewTest@cb5822]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
+<tr bgcolor="85796e">  <td>20/05/03 13:56:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeClass()[pri:0, instance:Assignment.Zoopla.Test.NewTest@39aeed2f]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
+<tr bgcolor="85796e">  <td>20/05/03 13:56:36</td>   <td>20671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.valiDateAgentName()[pri:0, instance:Assignment.Zoopla.Test.NewTest@39aeed2f]">valiDateAgentName</td> 
+  <td>main@1887813102</td>   <td></td> </tr>
+<tr bgcolor="85796e">  <td>20/05/03 13:57:04</td>   <td>48728</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterClass()[pri:0, instance:Assignment.Zoopla.Test.NewTest@39aeed2f]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
 </table>
